# TMHP

./: README.md  docker-compose.yml  pyproject.toml
src/: eval_result.py  execute_tmhp.cpp  extract_ok_data.py  ok_pdb.csv  pdb_12_with_hinges.csv  pdb_with_hinges.csv  rmsd_io.h  rmsd_struct.h  rmsdh.h  rmsdhk_monge_check_result.csv  specific_fast_rmsdhk.cpp  specific_fast_rmsdhk_more_data.cpp  specific_fast_rmsdhk_more_data_postpro.cpp  specific_fast_rmsdhk_postpro.cpp  specific_rmsdhk.cpp  specific_rmsdhk_more_data.cpp  specific_rmsdhk_total_mono_check.cpp  specific_rmsdhk_total_mono_check_more_data.cpp  speed_comparison_rmsdhk.sh  total_mono_check.sh
src/rmsdh_result/: rmsdhk_monge_check_more_data_2.csv
