[tool.poetry]
name = "mphk"
version = "0.1.0"
description = ""
authors = ["KoyanoBunsho <buna40950@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
biopandas = "^0.4.1"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
